--- a/trunk/manifest.json
+++ b/trunk/manifest.json
@@ -1,6 +1,6 @@
 ﻿{
 "name":"QuickSearch",
-"version":"1.3.0",
+"version":"1.3.2",
 "description":"向快捷菜单中添加搜索引擎.",
 "background_page": "background.html",
    "icons": {
@@ -10,12 +10,14 @@
   {
 "css": ["css/content.css"],
 "js": ["js/core.js", "js/util.js", "js/encodeToGb2312.js", "js/enginescontentscript.js", "js/savecontentscript.js"],
-    "matches": ["http://*/*"]
+    "matches": ["http://*/*", "https://*/*"]
   }
 ],
 "permissions": [
   "tabs",
-  "http://*/*"
+  "http://*/*", 
+  "https://*/*"
 ],
-"options_page": "options.html"
+"options_page": "options.html",
+"update_url": "http://searchforchrome.googlecode.com/svn/trunk/update.xml"
 }
