--- a/trunk/src/manifest.json
+++ b/trunk/src/manifest.json
@@ -1,6 +1,6 @@
 ﻿{
 "name":"QuickSearch",
-"version":"1.6.0",
+"version":"1.6.3",
 "description":"超级拖拽功能、将自定义的搜索引擎添加到右键菜单中.",
 "background_page": "background.html",
    "icons": {
@@ -10,7 +10,8 @@
   {
 	"css": ["css/content.css"],
 	"js": ["js/core.js", "js/util.js", "js/encodeToGb2312.js", "js/imageview.js",	"js/enginescontentscript.js", "js/savecontentscript.js","js/superdrag.js"],
-    	"matches": ["http://*/*", "https://*/*"]
+    	"matches": ["http://*/*", "https://*/*"],
+        "run_at": "document_start"
   }
 ],
 "permissions": [
